--- a/css/wide-screen.css
+++ b/css/wide-screen.css
@@ -9,6 +9,18 @@
     max-width: 100%;
   }
 
+  .portfolio-item{
+    display: inline-flex;
+  }
+
+  .portfolio-desc{
+    max-width: 40%;
+  }
+
+  .portfolio-img{
+    max-width: 50%;
+  }
+
   #navbar{
     max-width: 100vw;
     height: 10vh;
