--- a/css/wide-screen.css
+++ b/css/wide-screen.css
@@ -1,14 +1,4 @@
-/* @media (min-width: 601px) { */
-  header {
-    display: flex;
-    background-color: blue;
-
-  }
-
-  html, body, p, h1, img{
-    max-width: 100%;
-  }
-
+@media (min-width: 601px) {
   .portfolio-item{
     display: inline-flex;
     padding: 2%;
@@ -17,7 +7,6 @@
   .portfolio-desc{
     max-width: 40%;
     padding-right: 3%;
-    padding-left: 3%;
   }
 
   .portfolio-img{
@@ -25,18 +14,11 @@
     height: fit-content;
   }
 
-  #navbar{
-    max-width: 100vw;
-    height: 10vh;
-
-    padding: 2.5%;
-  }
-
-  #main{
+  .main{
     display: inline-flex;
   }
 
-  #sidebar{
+  .sidebar{
     max-width: 10%;
 
     margin: 2.5%;
@@ -56,19 +38,13 @@
     padding: 2.5%;
   }
 
-  #biography{
-    display: inline-flex;
-  }
-
   #bio-img{
-    max-width: 25vw;
-    max-height: auto;
+    max-width: 25%;
+    height: fit-content;
   }
 
   #bio-text {
-    max-width: 50vw;
-    max-height: auto;
-
-    margin-left: 5%;
+    max-width: 70%;
+    padding-left: 3%;;
   }
-/* } */
+}
