--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,10 @@
 html {
   margin: 0px;
+  background-color: #190A33;
 
 }
 body{
-  margin: 0px;
-}
-
-h1{
-  text-align: center;
+  margin: 5%;
 }
 
 html, body, p, h1, img{
@@ -16,44 +13,73 @@ html, body, p, h1, img{
 
 h1, h2, h3, h4, h5, h6, p{
   font-family: Arial, sans-serif;
+  color: #FBF7EE;
 }
 
 img{
   border-radius: 2%;
 }
+
+a{
+  color: #FBF7EE;
+}
+
+a:hover{
+  color: #F4E9CD;
+}
+
 /* Add-on classes */
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.hide-scrollbar::-webkit-scrollbar{
-  display: none;
-}
-.hide-scrollbar{
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+.main{
+  background-color: #948994;
 
-  overflow-y: hidden;
+  border-radius: 2%;
 }
 
 .center-text{
   text-align: center;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-body{
-
+.navigation-link{
+  padding-left: 20%;
+  padding-right: 20%;
 }
+
+.portfolio-text{
+  margin: 0%;
+}
+
+.contact-text{
+  max-width: fit-content;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
 /* Items by ids */
-
-#navbar{
-  text-align: center;
-}
 
 .sidebar>img{
   border-radius: 50%;
-
-
 }
 
 #bio-text{
   font-size: 1rem;
+}
+
+#top-bar{
+  background-color:#190A33; 
+  position: sticky;
+  top: 0;
+}
+
+#header{
+  display: flex;
+  justify-content: center;
+}
+
+#title{
+  margin-bottom: 0%;
+  text-align: center;
+
+  font-size: 2.4em;
+  color: #FBF7EE;
 }
