--- a/css/small-screen.css
+++ b/css/small-screen.css
@@ -1,7 +1,6 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (max-device-width: 600px) {
 
   .portfolio-heading{
-    margin-top: 10%;
     margin-left: 5%;
     margin-right: 5%;
   }
@@ -21,6 +20,7 @@
 
   #bio-text {
     max-width: 90%;
+    margin-top: 5%
     margin-left: 5%;
     margin-right: 5%;
   }
