--- a/templates/template.html
+++ b/templates/template.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Alia Toth-Smith</title>
+    <title>TITLE</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/wide-screen.css">
-    <link rel="stylesheet" href="css/small-screen.css">
+    <link rel="stylesheet" href="UPDATE TO CORRECT LINK css/style.css">
+    <link rel="stylesheet" href="UPDATE TO CORRECT LINK css/wide-screen.css">
+    <link rel="stylesheet" href="UPDATE TO CORRECT LINK css/small-screen.css">
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -21,8 +21,9 @@
   </head>
   
   <body>
+
+    <!-- TOP BAR -->
     <div id='top-bar'>
-      <!-- <h1 id='title'>Alia Toth-Smith</h1> -->
 
       <div id='header' class="flex-display">
 
@@ -33,11 +34,11 @@
           </p>
   
           <p class='contact-text'>
-            <a class="text-decoration-none" href="pages/resume.html">resume</a>
+            <a class="text-decoration-none" href="pages/bio.html">resume</a>
           </p>
 
           <p class='contact-text'>
-            <a class="text-decoration-none" href="pages/contact.html">contact</a>
+            <a class="text-decoration-none" href="pages/bio.html">contact</a>
           </p> 
 
         </div>
@@ -48,11 +49,12 @@
         </div>
       </div>
     </div>
-  
+    <!-- TOP BAR END -->
 
+    <!-- MAIN BODY -->
     <div class='main'>
-      <div id="work">
-        <h1 class='portfolio-heading center-text'>About Me</h1>
+      <div>
+        <h1 class="portfolio-heading center-text">Who I Am</h1>
 
         <div class="flex-display center">
           <div class='portfolio-item width-70'>
@@ -88,6 +90,8 @@
         </div>
       </div>
     </div>
+    <!-- MAIN BODY END -->
 
   </body>
 </html>
+
